objects/Account.object
<CustomObject>
    <fields>
        <fullName>Discount_Offered__c</fullName>
        <label>Discount Offered</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(End_Date__c -  Start_Date__c) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Repair_Facility</fullName>
        <active>true</active>
        <description>Used to track car repair facilities.</description>
        <label>Repair Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Trainers_Inc</fullName>
        <active>true</active>
        <label>Software Trainers Inc</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>